[tool.poetry]
name = "pyvulnerabilitylookup"
version = "2.2.0"
description = "Python CLI and module for Vulnerability Lookup"
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "BSD-3-Clause"

readme = "README.md"

classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Security',
    'Topic :: Internet',
]

[tool.poetry.scripts]
vulnerability_lookup = 'pyvulnerabilitylookup:main'

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
Sphinx = { version = "^8.1.3", optional = true }

[tool.poetry.extras]
docs = ["Sphinx"]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.2"
mypy = "^1.13.0"
types-requests = "^2.32.0.20241016"
ipython = "^8.30.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
