[project]
name = "pyvulnerabilitylookup"
version = "2.19.0"
description = "Python CLI and module for Vulnerability Lookup"
authors = [{name="Raphaël Vinot", email="raphael.vinot@circl.lu>"}]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10"

dynamic = [ "classifiers" ]

dependencies = [
    "requests (>=2.32.5)"
]

[project.urls]
repository = "https://github.com/vulnerability-lookup/PyVulnerabilityLookup"
documentation = "https://pyvulnerabilitylookup.readthedocs.io/"

[tool.poetry]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet',
]

[project.scripts]
vulnerability_lookup = 'pyvulnerabilitylookup:main'

[project.optional-dependencies]
docs = ["Sphinx (>=9.0.4) ; python_version >= \"3.11\""]

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.4"
mypy = "^1.19.0"
types-requests = "^2.32.4.20250913"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
